---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024-10-XX
  Features:
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024-09-30
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: