@@ -1,13 +1,13 @@
 {
     "name": "lightning-settings",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "title": "Lightning Settings",
     "author": "Muppet9010",
     "contact": "",
     "homepage": "https://github.com/muppet9010/Factorio-Lightning-Settings",
-    "factorio_version": "1.2",
+    "factorio_version": "2.0",
     "dependencies": [
-        "base >= 1.2.25"
+        "base >= 2.0.0"
     ],
     "description": "Allows control over lightning on Fulgora. Can change both the visuals & sounds, plus the frequency and impact of lightning."
 }
